abc349/E/er
main.cpp: In lambda function:
main.cpp:884:42: error: inconsistent types 'long long int' and 'bool' deduced for lambda return type
  884 |                         return (s[0]>s[1]?false:true);
      |                                ~~~~~~~~~~^~~~~~~~~~~~
main.cpp:900:9: warning: control reaches end of non-void function [-Wreturn-type]
  900 |         };
      |         ^
